# campfire

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  .npmignore  .terraformignore  AGENTS.md  CLAUDE.md  DESIGN.md  INITIAL_BUSINESS_CONTEXT.md  Makefile  README.md  RENDER_DEPLOYMENT_READINESS_REPORT.md  docker-compose.backend.yml  docker-compose.yml  docs.json  package-lock.json  package.json  skills-lock.json
apps/api/: .env.example  .env.local.example  Makefile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0000_baseline.py  0001_identity_initial.py  0002_repertoire_initial.py  0002_seed_ada.py  0003_repertoire_initial.py  0004_remove_identity_preferences.py
apps/api/queries/sqltools/: README.md
apps/api/queries/sqltools/identity/: 01_all_registered_users.sql  02_user_preference_by_email.sql  02_user_profile_by_email.sql  03_user_identity_snapshot.sql  04_session_families.sql  05_refresh_token_state.sql  06_data_quality_checks.sql  07_schema_reference.sql  08_local_cleanup_user.sql
apps/api/queries/sqltools/shared/: 00_connection_and_migrations.sql
apps/api/scripts/: check_aurora_extensions.py  dev_seed.py  openapi_snapshot.py  regenerate_ada_hash.py  seed.py
apps/api/src/application/preferences/: service.py
apps/api/src/application/user_context/: dto.py  service.py
apps/api/src/campfire_api/: main.py  settings.py
apps/api/src/campfire_api/shared/: catalogs.py  logging.py  request_id.py
apps/api/src/domain/preferences/: models.py  repository.py
apps/api/src/domain/user/: models.py  repository.py
apps/api/src/infrastructure/auth/: claims.py  cognito_linking.py
apps/api/src/infrastructure/http/: __init__.py  health.py  me.py  onboarding.py  preferences.py
apps/api/src/infrastructure/persistence/: local_preferences_repository.py  local_user_repository.py
apps/api/src/main/: handler.py  local_auth.py  local_dynamodb.py  local_server.py  logging.py  observability.py  settings.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_health_contract.py  test_me_contract.py  test_openapi_snapshot.py  test_preferences_contract.py  test_repertoire_openapi_snapshot.py  test_route_inventory.py
apps/api/tests/e2e/: test_local_server.py
apps/api/tests/helpers/: auth_claims.py
apps/api/tests/integration/: test_auth_failures.py  test_dynamodb_local_user_repository.py  test_dynamodb_preferences_repository.py  test_get_or_bootstrap_local_user.py  test_localstack_bootstrap.py
apps/api/tests/integration/identity/: helpers.py  test_authorization_scope.py  test_google_stub.py  test_login.py  test_logout.py  test_me.py  test_no_secret_leakage.py  test_preferences.py  test_refresh.py  test_register.py
apps/api/tests/integration/repertoire/: conftest.py  helpers.py  test_add_entry_route.py  test_authorization.py  test_list_route.py  test_remove_route.py  test_search_route.py  test_update_route.py
apps/api/tests/local/: run_local_api.py  run_local_usecases.py
apps/api/tests/unit/: test_architecture.py  test_cors.py  test_doctor_messages.py  test_onboarding_state.py  test_preferences.py  test_settings.py  test_user_identity.py
apps/api/tests/unit/identity/: fakes.py  test_authenticate_user.py  test_entities.py  test_get_me.py  test_google_stub.py  test_refresh_session.py  test_register_user.py  test_sign_out.py  test_update_preferences.py
apps/api/tests/unit/repertoire/: test_add_or_update_entry.py  test_deezer_song_catalog.py  test_entities.py  test_in_memory_search_limiter.py  test_list_my_entries.py  test_remove_entry.py  test_search_songs.py  test_ttl_search_cache.py  test_update_proficiency.py  test_value_objects.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/src/campfire/: __init__.py  config.py  main.py
backend/src/campfire/application/: __init__.py  dto.py
backend/src/campfire/application/use_cases/: __init__.py  list_possible_repertoire.py  list_user_repertoire.py  list_users.py  register_repertoire_entry.py  search_instruments.py  search_songs.py
backend/src/campfire/domain/: __init__.py  exceptions.py
backend/src/campfire/domain/models/: __init__.py  instrument.py  (+4 more)
backend/src/campfire/infrastructure/: __init__.py  bootstrap.py
backend/src/campfire/interfaces/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py  test_api_repertoire.py  test_api_songs_instruments.py
backend/tests/unit/: test_proficiency.py  test_register_repertoire_entry.py  test_repertoire_service.py  test_search.py
(+606 files in other folders)
