[project]
name = "campfire-api"
version = "0.1.0"
description = "Campfire auth bootstrap Lambda service"
requires-python = ">=3.12"
dependencies = [
  "aws-lambda-powertools>=3.9.0,<4.0.0",
  "boto3>=1.35.0,<2.0.0",
  "pydantic>=2.9.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "debugpy>=1.8,<2.0",
  "moto[server]>=5.1.0,<6.0.0",
  "PyJWT[crypto]>=2.10.1,<3.0.0",
  "pytest>=8.3.3,<9.0.0",
]

[project.scripts]
campfire-local-auth = "main.local_auth:main"
campfire-local-dynamodb = "main.local_dynamodb:main"
campfire-local-server = "main.local_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require the shared local stack",
  "contract: HTTP and contract-level tests",
]
