[project]
name = "campfire-api"
version = "0.1.0"
description = "Campfire backend API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<1.14",
  "argon2-cffi>=23.1,<24",
  "asyncpg>=0.30,<0.31",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<0.116",
  "httpx>=0.28,<0.29",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-jose[cryptography]>=3.3,<4",
  "sqlalchemy>=2.0.36,<2.1",
  "uvicorn[standard]>=0.32,<0.33",
  "uuid-utils>=0.9,<0.10",
]

[dependency-groups]
dev = [
  "anyio>=4.6,<5",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "ruff>=0.7,<0.8",
  "testcontainers[postgres]>=4.8,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campfire_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: domain and application tests without infrastructure",
  "integration: tests that exercise the FastAPI app against Postgres",
  "contract: OpenAPI snapshot tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "TID251", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sqlalchemy".msg = "SQLAlchemy is restricted to persistence adapters."
"fastapi".msg = "FastAPI is restricted to HTTP adapters and app assembly."
"argon2".msg = "Argon2 is restricted to security adapters."
"jose".msg = "python-jose is not used in the domain/application layers."

[tool.ruff.lint.per-file-ignores]
"src/campfire_api/contexts/identity/adapters/http/**.py" = ["TID251"]
"src/campfire_api/contexts/identity/adapters/persistence/**.py" = ["TID251"]
"src/campfire_api/contexts/identity/adapters/security/**.py" = ["TID251"]
"src/campfire_api/main.py" = ["TID251"]
"alembic/**.py" = ["TID251"]
"scripts/**.py" = ["TID251"]
"tests/**.py" = ["TID251"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
